fixed vertical align

--- a/src/client/components/404-page/index.scss
+++ b/src/client/components/404-page/index.scss
@@ -1,5 +1,5 @@
 .error-container {
-    top: 50%;
+    top: calc(50% - 36px);
     width: 100%;
     text-align: center;
     position: absolute;
